# studio-rust

./: README.md
.github/: FUNDING.yml
alpine/: Cargo.toml  Dockerfile  Makefile  README.md
alpine/src/: main.rs
alpine/templates/: index.html
blog/: Cargo.toml  Dockerfile  README.md
blog/public/: robots.txt
blog/public/css/: index.css  reader.css
blog/public/css/my/: code.css
blog/public/js/my/: code.js  markdown.js
blog/src/: apis.rs  db.rs  docs.rs  files.rs  main.rs
blog/templates/: doc_reader.html  docs.html  index.html
blog/templates/docs/: search.html
blog/templates/index/: aside.html  footer.html  search.html
cloudflare/: .dev.vars  .gitignore  Cargo.toml  Makefile  README.md  wrangler.toml
cloudflare/src/: lib.rs
speecher/: Cargo.toml  README.md
speecher/src/: main.rs
streaming/: Cargo.toml  Makefile  README.md
streaming/src/: main.rs
streaming/src/avatar/: mod.rs
streaming/src/chat/: mod.rs
