[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0"
actix-web = "4"
base64 = "0"
chrono = "0"
dotenv = "0"
futures = "0"
mongodb = "2"
reqwest = { version = "0", features = ["json"] }
serde = "1"
serde_json = "1"
tera = "1"
