[package]
name = "app"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
worker = { version = "0.3.4", features = ["d1"] }
worker-macros = "0.3.4"
